--- a/Boutique-FE/src/pages/saree/saree.component.html
+++ b/Boutique-FE/src/pages/saree/saree.component.html
@@ -3,7 +3,7 @@
    
     <div
       class="arrivalcard"
-      *ngFor="let product of products; let i = index"
+      *ngFor="let product of filteredData; let i = index"
       (click)="selectCard(i)"
     >
       <!-- Card Image -->
