--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
@@ -32,6 +32,9 @@ body {
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     background-image: url('../../../assets/images/lehanga.png');
+    background-size: cover; /* Ensures the image covers the container fully */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
   }
   
   .featured-img {
@@ -57,6 +60,9 @@ body {
     transition: transform 0.3s ease, border-color 0.3s ease;
     cursor: pointer;
     background-image: url('../../../assets/images/saree.png');
+    background-size: contain; /* Ensures the image covers the container fully */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
   }
   
   .thumbnail:hover,
