payment api is implement

--- a/Boutique-FE/src/pages/cart/cart.component.html
+++ b/Boutique-FE/src/pages/cart/cart.component.html
@@ -77,7 +77,7 @@
         <span>Notes:</span>
         <textarea class="notes-input" placeholder="Add any special instructions"></textarea>
       </div> -->
-      <button class="checkout-btn">Proceed to Checkout</button>
+      <button class="checkout-btn" (click)="proceedToCheckout()">Proceed to Checkout</button>
     </div>
   </div>
 </div>
