--- a/Boutique-FE/src/pages/sign-up/sign-up.component.html
+++ b/Boutique-FE/src/pages/sign-up/sign-up.component.html
@@ -9,6 +9,19 @@
   <form [formGroup]="signup" (ngSubmit)="onSignUp()" class="form-container">
     <!-- Email Field -->
     <div class="form-group">
+      <label for="name">Name</label>
+      <input 
+        type="name" 
+        class="form-control" 
+        formControlName="name" 
+        name="name" 
+        required />
+      
+      <!-- Display Validation Errors for Email -->
+     
+    </div>
+
+    <div class="form-group">
       <label for="email">Email</label>
       <input 
         type="email" 
@@ -39,6 +52,19 @@
         <p *ngIf="signup.get('password')?.hasError('required')">Password is required</p>
         <p *ngIf="signup.get('password')?.hasError('minlength')">Password must be at least 6 characters long</p>
       </div>
+      
+    </div>
+    <div class="form-group">
+      <label for="phonenumber">Phone Number</label>
+      <input 
+        type="phonenumber" 
+        class="form-control" 
+        formControlName="phonenumber"
+        name="phonenumber" 
+        required />
+      
+      
+      
     </div>
 
     <button type="submit" [disabled]="signup.invalid" class="signup-button">Sign Up</button>
