--- a/Boutique-FE/src/pages/userpage/list-user/list-user.component.html
+++ b/Boutique-FE/src/pages/userpage/list-user/list-user.component.html
@@ -13,22 +13,24 @@
       <thead>
         <tr>
           <th>Email</th>
-          <th>UID</th>
-          <th>Role</th>
-          <th>Actions</th>
+          <th>Name</th>
+          <th>Password</th>
+          <th>Phone Number</th>
         </tr>
       </thead>
       <tbody>
         <!-- Loop through the users array -->
         <tr *ngFor="let user of users">
-          <td>{{ user.email }}</td>
-          <td>{{ user.uid }}</td>
-          <td>{{ user.role ?? '-'}}</td>
+          <td>{{ user.email??'-' }}</td>
+          <td>{{ user.name ?? '-' }}</td>
+          <td>{{ user.password ?? '-'}}</td>
+          <td>{{ user.phonenumber ?? '-'}}</td>
+           <!-- Add action buttons 
           <td>
-            <!-- Add action buttons -->
+           
             <button class="edit-btn"><i class="fas fa-edit"></i></button>
             <button class="delete-btn"><i class="fas fa-trash"></i></button>
-          </td>
+          </td>-->
         </tr>
       </tbody>
     </table>
