--- a/Boutique-FE/src/pages/cart/cart.component.html
+++ b/Boutique-FE/src/pages/cart/cart.component.html
@@ -8,7 +8,7 @@
         <div class="cart-item" *ngFor="let item of cartItems">
           <!-- Product Image -->
           <div class="cart-item-product" >
-            <!-- <img src="src/assets/product1.jpg" alt="{{ item.product.title }}" class="item-image"> -->
+            <img [src]="url + item.imageUrl"  class="item-image">
           </div>
 
           <!-- Product Name and Description -->
