--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.css
@@ -25,11 +25,11 @@
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       width: 100%;
-      width: 260px;
+     
       height: 240px; /* Fixed height for the image */
       overflow: hidden;
       transition: transform 0.1s ease-in-out;
-      background-image: url('../../../assets/images/saree2.png');
+      /* background-image: url('../../../assets/images/saree2.png'); */
       background-size: contain; /* Ensures the image covers the container fully */
      background-position: center; /* Centers the image */
      background-repeat: no-repeat; /* Prevents the image from repeating */
