--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
@@ -31,7 +31,7 @@ body {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-image: url('../../../assets/images/lehanga.png');
+    /* background-image: url('../../../assets/images/lehanga.png'); */
     background-size: cover; /* Ensures the image covers the container fully */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
